portfolio to projects

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 <a class="page-scroll" href="#services">Education<span></span></a>
 </li>
 <li class="nav-item">
-<a class="page-scroll" href="#project">Portfolio<span></span></a>
+<a class="page-scroll" href="#project">Projects<span></span></a>
 </li>
 
 <li class="nav-item">
@@ -246,53 +246,10 @@
 </div>
 </div> 
 </div>
-<!--<div class="col-lg-4 col-sm-6">
-<div class="single_service mt-30 wow fadeInUpBig" data-wow-duration="1.3s" data-wow-delay="0.8s">
-<div class="service_icon">
-<i class="lni lni-ux"></i>-->
+<!---->
 </div>
 <!--
-<div class="service_content">
-<h4 class="service_title"><a href="#">UI/UX Design</a></h4>
-<p>Lorem ipsum dolor sit aconsect dipisicing elit, sed do eiusmod to incididunt uabore etdolore magna aliqua.</p>
-</div>
-</div> 
-</div>
-<div class="col-lg-4 col-sm-6">
-<div class="single_service mt-30 wow fadeInUpBig" data-wow-duration="1.3s" data-wow-delay="0.2s">
-<div class="service_icon">
-<i class="lni lni-code"></i>
-</div>
-<div class="service_content">
-<h4 class="service_title"><a href="#">Frontend Development</a></h4>
-<p>Lorem ipsum dolor sit aconsect dipisicing elit, sed do eiusmod to incididunt uabore etdolore magna aliqua.</p>
-</div>
-</div> 
-</div>
-<div class="col-lg-4 col-sm-6">
-<div class="single_service mt-30 wow fadeInUpBig" data-wow-duration="1.3s" data-wow-delay="0.5s">
-<div class="service_icon">
-<i class="lni lni-briefcase"></i>
-</div>
-<div class="service_content">
-<h4 class="service_title"><a href="#">Business Analysis</a></h4>
-<p>Lorem ipsum dolor sit aconsect dipisicing elit, sed do eiusmod to incididunt uabore etdolore magna aliqua.</p>
-</div>
-</div> 
-</div>
-<div class="col-lg-4 col-sm-6">
-<div class="single_service mt-30 wow fadeInUpBig" data-wow-duration="1.3s" data-wow-delay="0.8s">
-<div class="service_icon">
-<i class="lni lni-bullhorn"></i>
-</div>
-<div class="service_content">
-<h4 class="service_title"><a href="#">Digital Marketing</a></h4>
-<p>Lorem ipsum dolor sit aconsect dipisicing elit, sed do eiusmod to incididunt uabore etdolore magna aliqua.</p>
-</div>
-</div> 
-</div>
-</div> 
-</div> -->
+ -->
 </section>
 
 
@@ -312,7 +269,7 @@
 </div>
 <div class="col-sm-3">
 <div class="project_btn text-sm-right">
-<!--<p<a class="main-btn main-btn-2" href="#">All Works</a>-->
+<!---->
 </div> 
 </div>
 </div> 
@@ -333,7 +290,7 @@
 <div class="single_project ">
 <div class="project_image">
     <video controls width="350" height="300"  autoplay>
-        <source src=".../../assets/images/Project-Video.mp4" type="video/mp4">
+        <source src=".../../assets/images/p.mp4" type="video/mp4">
         <source src="Project-Video.ogg" type="video/ogg">
         
       </video>
