--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
 <div class="single_project ">
 <div class="project_image">
     <video controls width="350" height="300"  autoplay>
-        <source src=".../../assets/images/p.mp4" type="video/mp4">
+        <source src=".../../assets/images/project-Clip.mp4" type="video/mp4">
         <source src="Project-Video.ogg" type="video/ogg">
         
       </video>
